# tf_perturb_seq

./: .gitignore  .gitmodules  README.md  gcp_inference_mudata_manifest.csv  main.py  pyproject.toml
2025_jamboree/: README.txt  cNMF_k_selection.ipynb
config/: loader.py
config/colors/: technology-benchmark_WTC11_TF-Perturb-seq.yaml
datasets/: intended_target_comparison.ipynb  metadata_generation_errors.md  qc.tsv
datasets/Engreitz_CCPerturbSeq_Benchmark/: cc_perturb_samplesheet.csv  engreitz_benchmark_samplesheet.tsv  guide_metadata_v43.tsv  pairs_to_test.csv
datasets/Engreitz_WTC11-benchmark_TF-Perturb-seq/: 1_generate_per_sample_metadata.sh  2_upload_to_gcp.sh  4_run_CRISPR_pipeline.sh  5_run_qc_pipeline.sh  README.md  patch_files.sh  (+5 more)
docs/: CRISPR_PIPELINE.md  DACC.md  DATA.md  OVERVIEW.md  PIPELINES.md  PROGRESS.md  REFERENCES.md  ROADMAP.md  TEAM.md  TODO.md
ref/: Hon_sgRNA_index_dacc_annot_reference.csv  README.md  create_harmonized_sgRNA_annot.ipynb  explore_sgRNA_annot.ipynb  guide_mapping.ipynb  negative_controls.tsv  non_targeting.tsv  positive_controls.tsv  sgRNA_id_Hon-Huangfu_mapped.tsv  sgRNA_id_master.tsv  target_genes.tsv
scripts/: generate_per_sample.py  guide_mapping.ipynb  h5mu_to_perturbnmf_h5ad.py  merge.py  patch_gcp_files.py  preprocess.py  qc.py  run_calibration.sh  run_cnmf_pipeline.sh  run_energy_distance_pipeline.sh  run_pathways.sh  run_qc_pipeline.sh  setup_dataset.py  sync_gcp_run.sh  upload_to_gcp.py  validate_gcp_paths.py
tests/: 3_mapping_guide.sh  4_intended_target.sh  6_generate_report.sh  7_format_anndata.sh
(+302 files in other folders)
