[project]
name = "tf-perturb-seq"
version = "0.1.0"
description = "Analysis and modeling for TF Perturb-seq experiments"
authors = [{ name = "Adam Klie" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.11.4",
    "cnmf>=1.7.0",
    "matplotlib>=3.10.8",
    "mudata>=0.3.2",
    "mygene>=3.2.2",
    "numba>=0.56",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scanpy>=1.11.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "synapseclient>=4.10.0",
    "torch>=2.9.1",
    "requests>=2.31.0",
    "ipykernel>=7.1.0",
    "matplotlib-venn>=1.1.2",
]
